oauth2/istio/auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: istio-ingressgateway-nginx
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  jwtRules:
  - issuer: https://login.microsoftonline.com/d400665f-0274-46fe-899b-38ed0885144a/v2.0
    jwksUri: https://login.microsoftonline.com/d400665f-0274-46fe-899b-38ed0885144a/discovery/v2.0/keys
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: istio-ingressgateway-nginx
#   namespace: nginx
# spec:
#   selector:
#     matchLabels:
#       app: nginx
#       cc: cc
#   # action: DENY
#   action: ALLOW
#   rules:
#   - from:
#     - source:
#         principals: ["*"]
