oauth2/istio/oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: nginx
spec:
  selector:
    app: oauth2-proxy
  ports:
  - name: http
    port: 4180
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        args:
        - --provider=oidc
        - --cookie-secure=true
        - --cookie-samesite=lax
        - --cookie-refresh=1h
        - --cookie-expire=4h
        - --cookie-name=_oauth2_proxy_istio_ingressgateway
        - --set-authorization-header=true
        - --email-domain=*
        - --http-address=0.0.0.0:4180
        - --upstream=static://200
        - --skip-provider-button=true
        - --whitelist-domain=tmanet.com
        - --oidc-issuer-url=https://login.microsoftonline.com/d400665f-0274-46fe-899b-38ed0885144a/v2.0
        ports:
        - containerPort: 4180
          protocol: TCP
        # readinessProbe:
        #   periodSeconds: 3
        #   httpGet:
        #     path: /ping
        #     port: 4180
